--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="cc-navbar navbar navbar-expand-lg position-fixed navbar-dark w-100">
       <div class="container-fluid">
-        <a class="navbar-brand text-uppercase  fw-bolder mx-4 py-3" href="#">Lorem ipsum .</a>
+        <a class="navbar-brand text-uppercase  fw-bolder mx-4 py-3" href="#">Le gout du péché</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,10 +41,10 @@
         <div class="row">
           <div class="col-md-6"></div>
           <div class="col-md-6">
-            <h1 class="text-capitalize py-3 redressed banner-desc">Lorem ipsum dolor sit amet elit <br>Maiores nemo <br>blanditiis </h1>
+            <h1 class="text-capitalize py-3 redressed banner-desc">Restaurant multi-saveurs a <br>votre <br>gout dans la ville de NDIKI </h1>
             <p>
               <button class="btn btn-order btn-lg me-5 rounded-0 merriweather">Commander maintenant</button>
-              <button class="btn btn-outline-infos  rounded-0 merriweather">Resérver</button>
+              <button class="btn btn-outline-infos mt-4 rounded-0 merriweather">Resérver</button>
             </p>
           </div>
         </div>
