--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               </div>
             </div>
           </div>
-          <div class="col  ">
+          <div class="col d-sm-none d-md-block">
             <div class="card">
               <img src="assets/img/carousel2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -178,7 +178,7 @@
               </div>
             </div>
           </div>
-          <div class="col ">
+          <div class="col d-sm-none d-md-block">
             <div class="card">
               <img src="assets/img/banniere5.jpg" class="card-img-top" alt="...">
               <div class="card-body">
@@ -299,10 +299,10 @@
     </section>
 
 
-    <section class="order-footer py-5">
+    <section class="order-footer py-5 ">
       <div class="container">
         <div class="row">
-          <div class="col-lg">
+          <div class="col-lg ">
             <h5 class="text-capitalize redressed text-center">le Restaurant</h5>
             <ul class="nav flex-column">
               <li class="nav-item d-flex justify-content-center">
