--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
             <div class="card">
-              <img src="assets/img/carousel1.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/carousel1.jpg" class="card-img-top" alt="..." class="w-100">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -162,7 +162,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="assets/img/carousel3.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/carousel3.jpg" class="card-img-top" alt="..." class="w-100">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -171,7 +171,7 @@
           </div>
           <div class="col d-sm-none d-md-block">
             <div class="card">
-              <img src="assets/img/carousel2.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/carousel2.jpg" class="card-img-top" alt="..." class="w-100">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -180,7 +180,7 @@
           </div>
           <div class="col d-sm-none d-md-block">
             <div class="card">
-              <img src="assets/img/banniere5.jpg" class="card-img-top" alt="...">
+              <img src="assets/img/banniere5.jpg" class="card-img-top" alt="..." >
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -206,12 +206,24 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Un environnemnet calme et decontractan</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item ">
               <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Un environnemnet calme et decontractant</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item ">
               <img src=".assets/img/carousel3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Un environnemnet calme et decontractan</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -229,7 +241,7 @@
     <section class="order-form py-5 ">
       <div class="container">
         <h1 class="merriweather text-center text-light mb-4">Passer une commande</h1>
-      </div>
+      
       <form>
         <div class="row">
           <div class="col-md-6 col-sm">
@@ -296,12 +308,13 @@
           </div>
         </div>
       </form>
+    </div>
     </section>
 
 
-    <section class="order-footer py-5 ">
+    <section class="order-footer py-5 mb-4">
       <div class="container">
-        <div class="row">
+        <div class="row ">
           <div class="col-lg ">
             <h5 class="text-capitalize redressed text-center">le Restaurant</h5>
             <ul class="nav flex-column">
