--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="text-capitalize py-3 redressed banner-desc">Restaurant multi-saveurs a <br>votre <br>gout dans la ville de NDIKI </h1>
             <p>
               <button class="btn btn-order btn-lg me-5 rounded-0 merriweather">Commander maintenant</button>
-              <button class="btn btn-outline-infos mt-4 rounded-0 merriweather">Resérver</button>
+              <button class="btn btn-outline-info btn-lg rounded-0 merriweather">Resérver</button>
             </p>
           </div>
         </div>
